--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -542,7 +542,8 @@ Number of Fisher Scoring iterations: 4</code></pre>
 <figcaption>Coefficients</figcaption>
 </figure>
 </div>
-<p>But how do we interpret them? As you have seen in the Theory section above, the relationship between our independent variable and the probability of democracy is not linear: the curve was s-shaped, so that the increment in probability is not the same for, say moving from <span class="math inline">\(x_{1}\)</span> to <span class="math inline">\(x_{2}\)</span> and from <span class="math inline">\(x_{2}\)</span> to <span class="math inline">\(x_{3}\)</span>. For illustration see the orange bars in the following Figure:</p>
+<p>The values of these coefficients determine the shape of the s-shaped curve we derived above. To see exactly how different values of the intercept (<span class="math inline">\(\beta_0\)</span>) and the slope (<span class="math inline">\(\beta_1\)</span>) coefficients affect the curve, please use <a href="https://drfloreiche.github.io/shinylive/logistic/">this app</a> (it may take a moment to load, as it is a web-based application).</p>
+<p>But how do we interpret the coefficients substantively? As you have seen in the Theory section above, the relationship between our independent variable and the probability of democracy is not linear: the curve was s-shaped, so that the increment in probability is not the same for, say moving from <span class="math inline">\(x_{1}\)</span> to <span class="math inline">\(x_{2}\)</span> and from <span class="math inline">\(x_{2}\)</span> to <span class="math inline">\(x_{3}\)</span>. For illustration see the orange bars in the following Figure:</p>
 <p>&nbsp; &nbsp;</p>
 <div id="fig-lifepred" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
@@ -700,8 +701,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_lrnghy8r26ygxqvvu1tw(i, j, css_id) {
-          var table = document.getElementById("tinytable_lrnghy8r26ygxqvvu1tw");
+      function styleCell_ifr2c9ipcbiee5oorbhx(i, j, css_id) {
+          var table = document.getElementById("tinytable_ifr2c9ipcbiee5oorbhx");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -710,8 +711,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_lrnghy8r26ygxqvvu1tw(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_lrnghy8r26ygxqvvu1tw");
+      function spanCell_ifr2c9ipcbiee5oorbhx(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_ifr2c9ipcbiee5oorbhx");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -742,20 +743,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_i1ntylw2r528e7uml9gt',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_75551edm3mfzjj6ca4gg',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_y6fkz8tror7ypx3otfy4',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_9afhbax4e6qamh3mdiic',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_qsvbphtidpczzwustibg',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_5u1yoqz9z330c2b5r2lf',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_5wvbeasx0pjp24g8hzi0',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_xzrmna9ekiz9225a80qa',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_dj04ritk5nl4cqa6oey7',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_kfgduk49kw5akel3dn8o',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_60gw6zml24ds0z9l3aft',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_4execvzrj3u17yurq1hm',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_6od9wuuilt4qsuey4d50',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_wyaroenl4kb9hg3h8wd2',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_nbl6v7wyqyjnrn0zraof',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_btsq9zkpdufqeivg0omk',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_lrnghy8r26ygxqvvu1tw(cell.i, cell.j, group.css_id);
+                  styleCell_ifr2c9ipcbiee5oorbhx(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -763,17 +764,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_i1ntylw2r528e7uml9gt, .table th.tinytable_css_i1ntylw2r528e7uml9gt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_75551edm3mfzjj6ca4gg, .table th.tinytable_css_75551edm3mfzjj6ca4gg { text-align: center; }
-      .table td.tinytable_css_y6fkz8tror7ypx3otfy4, .table th.tinytable_css_y6fkz8tror7ypx3otfy4 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_9afhbax4e6qamh3mdiic, .table th.tinytable_css_9afhbax4e6qamh3mdiic { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qsvbphtidpczzwustibg, .table th.tinytable_css_qsvbphtidpczzwustibg { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_5u1yoqz9z330c2b5r2lf, .table th.tinytable_css_5u1yoqz9z330c2b5r2lf { text-align: left; }
-      .table td.tinytable_css_5wvbeasx0pjp24g8hzi0, .table th.tinytable_css_5wvbeasx0pjp24g8hzi0 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_xzrmna9ekiz9225a80qa, .table th.tinytable_css_xzrmna9ekiz9225a80qa { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_dj04ritk5nl4cqa6oey7, .table th.tinytable_css_dj04ritk5nl4cqa6oey7 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_kfgduk49kw5akel3dn8o, .table th.tinytable_css_kfgduk49kw5akel3dn8o { text-align: center; }
+      .table td.tinytable_css_60gw6zml24ds0z9l3aft, .table th.tinytable_css_60gw6zml24ds0z9l3aft { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4execvzrj3u17yurq1hm, .table th.tinytable_css_4execvzrj3u17yurq1hm { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_6od9wuuilt4qsuey4d50, .table th.tinytable_css_6od9wuuilt4qsuey4d50 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_wyaroenl4kb9hg3h8wd2, .table th.tinytable_css_wyaroenl4kb9hg3h8wd2 { text-align: left; }
+      .table td.tinytable_css_nbl6v7wyqyjnrn0zraof, .table th.tinytable_css_nbl6v7wyqyjnrn0zraof { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_btsq9zkpdufqeivg0omk, .table th.tinytable_css_btsq9zkpdufqeivg0omk { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_lrnghy8r26ygxqvvu1tw" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_ifr2c9ipcbiee5oorbhx" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -877,8 +878,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_n5qnk8zhxovm36df791j(i, j, css_id) {
-          var table = document.getElementById("tinytable_n5qnk8zhxovm36df791j");
+      function styleCell_86k1jwakomfqh8le8nkk(i, j, css_id) {
+          var table = document.getElementById("tinytable_86k1jwakomfqh8le8nkk");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -887,8 +888,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_n5qnk8zhxovm36df791j(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_n5qnk8zhxovm36df791j");
+      function spanCell_86k1jwakomfqh8le8nkk(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_86k1jwakomfqh8le8nkk");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -919,20 +920,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2cqu7bgaj8qlegbuhgxt',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_vxb6o0773p26ody5pjbl',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_fm1iotlb11aunn4tox3k',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_4z62ugbumhvt7lw060cp',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_qlfcxbzcwp43hqbtodf7',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_lfm06grhigrzewxlqkd4',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_wuvdu4037sk2wauxq9s4',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_zc8o5dod5f1ga3ullx5d',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_h7px9dgsv28alxcis711',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_vyo37s2fh521ami0tp21',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_zt65adoz5o0ylsn3607v',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_d1iodr9gcy5ukel1voz4',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_m1f8f22a5l2vokq1dlc5',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_iyuzx6ku39dr8r8zi5fx',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_qmkg48spfczwbzzonk7a',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_kv1rk2vaoxvg8b9myr2u',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_n5qnk8zhxovm36df791j(cell.i, cell.j, group.css_id);
+                  styleCell_86k1jwakomfqh8le8nkk(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -940,17 +941,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_2cqu7bgaj8qlegbuhgxt, .table th.tinytable_css_2cqu7bgaj8qlegbuhgxt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_vxb6o0773p26ody5pjbl, .table th.tinytable_css_vxb6o0773p26ody5pjbl { text-align: center; }
-      .table td.tinytable_css_fm1iotlb11aunn4tox3k, .table th.tinytable_css_fm1iotlb11aunn4tox3k { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_4z62ugbumhvt7lw060cp, .table th.tinytable_css_4z62ugbumhvt7lw060cp { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qlfcxbzcwp43hqbtodf7, .table th.tinytable_css_qlfcxbzcwp43hqbtodf7 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_lfm06grhigrzewxlqkd4, .table th.tinytable_css_lfm06grhigrzewxlqkd4 { text-align: left; }
-      .table td.tinytable_css_wuvdu4037sk2wauxq9s4, .table th.tinytable_css_wuvdu4037sk2wauxq9s4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_zc8o5dod5f1ga3ullx5d, .table th.tinytable_css_zc8o5dod5f1ga3ullx5d { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_h7px9dgsv28alxcis711, .table th.tinytable_css_h7px9dgsv28alxcis711 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_vyo37s2fh521ami0tp21, .table th.tinytable_css_vyo37s2fh521ami0tp21 { text-align: center; }
+      .table td.tinytable_css_zt65adoz5o0ylsn3607v, .table th.tinytable_css_zt65adoz5o0ylsn3607v { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_d1iodr9gcy5ukel1voz4, .table th.tinytable_css_d1iodr9gcy5ukel1voz4 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_m1f8f22a5l2vokq1dlc5, .table th.tinytable_css_m1f8f22a5l2vokq1dlc5 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_iyuzx6ku39dr8r8zi5fx, .table th.tinytable_css_iyuzx6ku39dr8r8zi5fx { text-align: left; }
+      .table td.tinytable_css_qmkg48spfczwbzzonk7a, .table th.tinytable_css_qmkg48spfczwbzzonk7a { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_kv1rk2vaoxvg8b9myr2u, .table th.tinytable_css_kv1rk2vaoxvg8b9myr2u { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_n5qnk8zhxovm36df791j" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_86k1jwakomfqh8le8nkk" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
