--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -434,14 +434,14 @@ Figure&nbsp;1: Latent Variable
 <p>Your inclination to go out, is likely to be influenced by the amount of money you have in your wallet / bank. If you are broke, you will be less inclined (if you are sensible), and if you are swimming in it, you will be more inclined. So, if the “propensity to go out” (which remember is running from minus to plus infinity) is influenced by your budget, then let’s construct a graph, in which we pop the propensity to go out on the y-axis, and the budget on the x-axis. If we assume that this relationship is linear, we can fit a regression line into this coordinate system, just as we have in the previous week:</p>
 <p>&nbsp; &nbsp;</p>
 <p><img src="images/Week 3/prop.png" id="fig-out" class="img-fluid quarto-figure quarto-figure-center anchored" style="width:70.0%" alt="Effect of Budget on Propensity to Go Out"> Whilst this visualises the influence of the budget on the latent variable, what we are aiming for is to make a prediction about the probability of you going out, or not.</p>
-<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <a href="#fig-towcdf" class="quarto-xref">Figure&nbsp;<span>2</span></a>.</p>
+<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <span class="quarto-unresolved-ref">?fig-towcdf</span>.</p>
 <p>&nbsp; &nbsp;</p>
-<div id="fig-towcdf" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
+<div id="fig-out" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-towcdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="files/Week 3/tau_prob.png" class="img-fluid quarto-figure quarto-figure-center figure-img" style="width:70.0%">
+<div aria-describedby="fig-out-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="images/Week 3/prop1.png" class="img-fluid quarto-figure quarto-figure-center figure-img" style="width:70.0%">
 </div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-towcdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-out-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;2: Towards the Cumulative Density Function, adapted from <span class="citation" data-cites="scott:1997">Long (1997, p. 46)</span>
 </figcaption>
 </figure>
@@ -701,8 +701,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_neirolpu0ohruzwshdno(i, j, css_id) {
-          var table = document.getElementById("tinytable_neirolpu0ohruzwshdno");
+      function styleCell_uezhzhhftkqfum6cbcbw(i, j, css_id) {
+          var table = document.getElementById("tinytable_uezhzhhftkqfum6cbcbw");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -711,8 +711,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_neirolpu0ohruzwshdno(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_neirolpu0ohruzwshdno");
+      function spanCell_uezhzhhftkqfum6cbcbw(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_uezhzhhftkqfum6cbcbw");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -743,20 +743,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_dyk1c1tsgsfv7adv2vu0',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_7v0nvmj10rf40ssa4ogg',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_11ik17ryqxe7gcpfyyfw',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_iaq3oqt97lquv40gfwv6',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_8ngdvadkomu2qmdqdxna',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_izs77vp64gn2r4grcewi',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_lhvfvpno2jr96srap59v',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_hqvpmloarv3txxs7mthb',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_rcq481ph0t3a2323av36',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_wdwr87g3ysu1rq1pdekg',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_fe26ixa7f9uzq2qeuy9v',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_b7fdzgbbjv542wdo894g',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_3qdua3ksqucr3w1g3o75',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_0rs5yczpae80wxdraov7',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_irs2qcme8ovneywifp6p',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_l4c5xgm11xd9ur0s94zz',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_neirolpu0ohruzwshdno(cell.i, cell.j, group.css_id);
+                  styleCell_uezhzhhftkqfum6cbcbw(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -764,17 +764,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_dyk1c1tsgsfv7adv2vu0, .table th.tinytable_css_dyk1c1tsgsfv7adv2vu0 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7v0nvmj10rf40ssa4ogg, .table th.tinytable_css_7v0nvmj10rf40ssa4ogg { text-align: center; }
-      .table td.tinytable_css_11ik17ryqxe7gcpfyyfw, .table th.tinytable_css_11ik17ryqxe7gcpfyyfw { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_iaq3oqt97lquv40gfwv6, .table th.tinytable_css_iaq3oqt97lquv40gfwv6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_8ngdvadkomu2qmdqdxna, .table th.tinytable_css_8ngdvadkomu2qmdqdxna { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_izs77vp64gn2r4grcewi, .table th.tinytable_css_izs77vp64gn2r4grcewi { text-align: left; }
-      .table td.tinytable_css_lhvfvpno2jr96srap59v, .table th.tinytable_css_lhvfvpno2jr96srap59v { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_hqvpmloarv3txxs7mthb, .table th.tinytable_css_hqvpmloarv3txxs7mthb { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_rcq481ph0t3a2323av36, .table th.tinytable_css_rcq481ph0t3a2323av36 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_wdwr87g3ysu1rq1pdekg, .table th.tinytable_css_wdwr87g3ysu1rq1pdekg { text-align: center; }
+      .table td.tinytable_css_fe26ixa7f9uzq2qeuy9v, .table th.tinytable_css_fe26ixa7f9uzq2qeuy9v { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_b7fdzgbbjv542wdo894g, .table th.tinytable_css_b7fdzgbbjv542wdo894g { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_3qdua3ksqucr3w1g3o75, .table th.tinytable_css_3qdua3ksqucr3w1g3o75 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_0rs5yczpae80wxdraov7, .table th.tinytable_css_0rs5yczpae80wxdraov7 { text-align: left; }
+      .table td.tinytable_css_irs2qcme8ovneywifp6p, .table th.tinytable_css_irs2qcme8ovneywifp6p { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_l4c5xgm11xd9ur0s94zz, .table th.tinytable_css_l4c5xgm11xd9ur0s94zz { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_neirolpu0ohruzwshdno" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_uezhzhhftkqfum6cbcbw" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -878,8 +878,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_mstatt3bqhc7z3bz1g5b(i, j, css_id) {
-          var table = document.getElementById("tinytable_mstatt3bqhc7z3bz1g5b");
+      function styleCell_52hfgzya6tv0xfklvke5(i, j, css_id) {
+          var table = document.getElementById("tinytable_52hfgzya6tv0xfklvke5");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -888,8 +888,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_mstatt3bqhc7z3bz1g5b(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_mstatt3bqhc7z3bz1g5b");
+      function spanCell_52hfgzya6tv0xfklvke5(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_52hfgzya6tv0xfklvke5");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -920,20 +920,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_7l1sv1h4xf3336h796e9',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_cv543h7a1nqjfv6l77vu',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_8zrlhme29s6lotcbp8et',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_4e3xslv80gx1i37sjfb6',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_xraa5jpjc9w1gdo443yb',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_2gor6dul9gnbn42gfq3u',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_bm1a0442iyiioopq2xdu',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_ywqyef6dnoosi86ummw7',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_f291jwm1cldzh42qis35',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_72n6pcvu9sqvxm0ccis2',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_9c9rrp95wi16n0e943un',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_xwr79ibainzhfjiso3ir',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_rlkbuxpz2fwibutjce2i',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_r4d2pgcaf723w8j1a0ie',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_js0qs6i9w4p0jfveu7ow',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_uny18irwc3iauobf050t',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_mstatt3bqhc7z3bz1g5b(cell.i, cell.j, group.css_id);
+                  styleCell_52hfgzya6tv0xfklvke5(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -941,17 +941,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_7l1sv1h4xf3336h796e9, .table th.tinytable_css_7l1sv1h4xf3336h796e9 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_cv543h7a1nqjfv6l77vu, .table th.tinytable_css_cv543h7a1nqjfv6l77vu { text-align: center; }
-      .table td.tinytable_css_8zrlhme29s6lotcbp8et, .table th.tinytable_css_8zrlhme29s6lotcbp8et { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_4e3xslv80gx1i37sjfb6, .table th.tinytable_css_4e3xslv80gx1i37sjfb6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_xraa5jpjc9w1gdo443yb, .table th.tinytable_css_xraa5jpjc9w1gdo443yb { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_2gor6dul9gnbn42gfq3u, .table th.tinytable_css_2gor6dul9gnbn42gfq3u { text-align: left; }
-      .table td.tinytable_css_bm1a0442iyiioopq2xdu, .table th.tinytable_css_bm1a0442iyiioopq2xdu { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ywqyef6dnoosi86ummw7, .table th.tinytable_css_ywqyef6dnoosi86ummw7 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_f291jwm1cldzh42qis35, .table th.tinytable_css_f291jwm1cldzh42qis35 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_72n6pcvu9sqvxm0ccis2, .table th.tinytable_css_72n6pcvu9sqvxm0ccis2 { text-align: center; }
+      .table td.tinytable_css_9c9rrp95wi16n0e943un, .table th.tinytable_css_9c9rrp95wi16n0e943un { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_xwr79ibainzhfjiso3ir, .table th.tinytable_css_xwr79ibainzhfjiso3ir { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_rlkbuxpz2fwibutjce2i, .table th.tinytable_css_rlkbuxpz2fwibutjce2i { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_r4d2pgcaf723w8j1a0ie, .table th.tinytable_css_r4d2pgcaf723w8j1a0ie { text-align: left; }
+      .table td.tinytable_css_js0qs6i9w4p0jfveu7ow, .table th.tinytable_css_js0qs6i9w4p0jfveu7ow { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_uny18irwc3iauobf050t, .table th.tinytable_css_uny18irwc3iauobf050t { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_mstatt3bqhc7z3bz1g5b" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_52hfgzya6tv0xfklvke5" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
