--- a/14-bib.html
+++ b/14-bib.html
@@ -318,6 +318,11 @@ R</span></em> (Second Edition). Thousand Oaks, <span>CA</span>: Sage.
 King, G. (1995). <span class="nocase">Replication, replication</span>.
 <em>PS: Political Science and Politics</em>, <em>28</em>(3), 541–559. <a href="https://doi.org/10.2307/420301">https://doi.org/10.2307/420301</a>
 </div>
+<div id="ref-linke:forthcoming" class="csl-entry" role="listitem">
+Linke, F. (forthcoming). <em><span class="nocase">Introduction to
+Quantitative Methods in the Social Sciences</span></em>. Oxford: Oxford
+University Press.
+</div>
 <div id="ref-lipset:1959" class="csl-entry" role="listitem">
 Lipset, S. M. (1959). <span class="nocase">Some Social Requisites of
 Democracy: Economic Development and Political Legitimacy</span>. <em>The
@@ -349,11 +354,6 @@ Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F.
 (2000). <em><span class="nocase">Democracy and Development - Political
 Institutions and Well-Being in the World, 1950-1990</span></em>.
 Cambridge: Cambridge University Press. <a href="https://doi.org/10.1017/CBO9780511804946">https://doi.org/10.1017/CBO9780511804946</a>
-</div>
-<div id="ref-reiche:forthcoming" class="csl-entry" role="listitem">
-Reiche, F. (forthcoming). <em><span class="nocase">Introduction to
-Quantitative Methods in the Social Sciences</span></em>. Oxford: Oxford
-University Press.
 </div>
 <div id="ref-stimson:na" class="csl-entry" role="listitem">
 Stimson, J. A. (n.d.). <em><span class="nocase">Professional Writing in
