--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1679,8 +1679,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_rwx8qacqpylcom6f0rha(i, j, css_id) {
-          var table = document.getElementById("tinytable_rwx8qacqpylcom6f0rha");
+      function styleCell_5xg5wuja8hxawfiggznu(i, j, css_id) {
+          var table = document.getElementById("tinytable_5xg5wuja8hxawfiggznu");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1689,8 +1689,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_rwx8qacqpylcom6f0rha(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_rwx8qacqpylcom6f0rha");
+      function spanCell_5xg5wuja8hxawfiggznu(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_5xg5wuja8hxawfiggznu");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1721,26 +1721,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_utvvu0e1assvtumrca4p',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_8yp9d698lfnpfmkri0hv',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_5tkvky4qq4bdxja3uwqm',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_qscs8e04n8luotur6sak',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_f5bq300c9wss0mpqd5hu',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_vkb8i77c2pru3fbyps7s',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_pkgsmd7ursgbqsvbm4ar',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_npujdo7tzvse4v3wgtbo',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_vo42v9p1qd9jj7y5blv9',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_yankasqqgbbw3lh0l96x',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_3rplrnn0bmf04t9zipvq',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_onq0zp5zhcc5imcdspxu',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_2s9hse317s2fkkmodk2n',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_xut4la6vv4i4lo2jv5s4',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_uusskt4sgw6lhz4aynfr',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_wq0lfmxxq8ic0o8saevb',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_kfxnqkuoh41dxsiq4vv3',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_zjhocvolcs1jh4z0y13j',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_9p2kmah8qnmvgxi6bc7b',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_hi069zq0p8cjciw2unfs',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_4kwtwb9wyl6o5p18c7z7',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_ytytoo1w7pp43r9f7ex6',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_vusiowf3y84u3q55rrve',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_x8pef066crhr6n7b2h45',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_cu42bcis07v29uuzh0e4',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_rumdxhildmxnhbue02qs',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_08475egjmzlur5ancphh',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_h3rmpbrwma6v0de4erfg',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_rwx8qacqpylcom6f0rha(cell.i, cell.j, group.css_id);
+                  styleCell_5xg5wuja8hxawfiggznu(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1748,23 +1748,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_utvvu0e1assvtumrca4p, .table th.tinytable_css_utvvu0e1assvtumrca4p { text-align: center; text-align: center; }
-      .table td.tinytable_css_8yp9d698lfnpfmkri0hv, .table th.tinytable_css_8yp9d698lfnpfmkri0hv { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_5tkvky4qq4bdxja3uwqm, .table th.tinytable_css_5tkvky4qq4bdxja3uwqm { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_qscs8e04n8luotur6sak, .table th.tinytable_css_qscs8e04n8luotur6sak { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_f5bq300c9wss0mpqd5hu, .table th.tinytable_css_f5bq300c9wss0mpqd5hu { text-align: center; }
-      .table td.tinytable_css_vkb8i77c2pru3fbyps7s, .table th.tinytable_css_vkb8i77c2pru3fbyps7s { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_pkgsmd7ursgbqsvbm4ar, .table th.tinytable_css_pkgsmd7ursgbqsvbm4ar { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_npujdo7tzvse4v3wgtbo, .table th.tinytable_css_npujdo7tzvse4v3wgtbo { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_vo42v9p1qd9jj7y5blv9, .table th.tinytable_css_vo42v9p1qd9jj7y5blv9 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_yankasqqgbbw3lh0l96x, .table th.tinytable_css_yankasqqgbbw3lh0l96x { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_3rplrnn0bmf04t9zipvq, .table th.tinytable_css_3rplrnn0bmf04t9zipvq { text-align: left; }
-      .table td.tinytable_css_onq0zp5zhcc5imcdspxu, .table th.tinytable_css_onq0zp5zhcc5imcdspxu { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_2s9hse317s2fkkmodk2n, .table th.tinytable_css_2s9hse317s2fkkmodk2n { text-align: left; text-align: center; }
-      .table td.tinytable_css_xut4la6vv4i4lo2jv5s4, .table th.tinytable_css_xut4la6vv4i4lo2jv5s4 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_uusskt4sgw6lhz4aynfr, .table th.tinytable_css_uusskt4sgw6lhz4aynfr { text-align: center; text-align: center; }
+      .table td.tinytable_css_wq0lfmxxq8ic0o8saevb, .table th.tinytable_css_wq0lfmxxq8ic0o8saevb { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_kfxnqkuoh41dxsiq4vv3, .table th.tinytable_css_kfxnqkuoh41dxsiq4vv3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_zjhocvolcs1jh4z0y13j, .table th.tinytable_css_zjhocvolcs1jh4z0y13j { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_9p2kmah8qnmvgxi6bc7b, .table th.tinytable_css_9p2kmah8qnmvgxi6bc7b { text-align: center; }
+      .table td.tinytable_css_hi069zq0p8cjciw2unfs, .table th.tinytable_css_hi069zq0p8cjciw2unfs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4kwtwb9wyl6o5p18c7z7, .table th.tinytable_css_4kwtwb9wyl6o5p18c7z7 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ytytoo1w7pp43r9f7ex6, .table th.tinytable_css_ytytoo1w7pp43r9f7ex6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vusiowf3y84u3q55rrve, .table th.tinytable_css_vusiowf3y84u3q55rrve { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_x8pef066crhr6n7b2h45, .table th.tinytable_css_x8pef066crhr6n7b2h45 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_cu42bcis07v29uuzh0e4, .table th.tinytable_css_cu42bcis07v29uuzh0e4 { text-align: left; }
+      .table td.tinytable_css_rumdxhildmxnhbue02qs, .table th.tinytable_css_rumdxhildmxnhbue02qs { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_08475egjmzlur5ancphh, .table th.tinytable_css_08475egjmzlur5ancphh { text-align: left; text-align: center; }
+      .table td.tinytable_css_h3rmpbrwma6v0de4erfg, .table th.tinytable_css_h3rmpbrwma6v0de4erfg { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_rwx8qacqpylcom6f0rha" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_5xg5wuja8hxawfiggznu" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2105,7 +2105,7 @@ F =  16.30128  on  2  and  9274  df: p= 8.5676e-08 </code></pre>
 <h1 class="unnumbered">Exercises</h1>
 <section id="the-data-set" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="the-data-set">The Data Set</h2>
-<p> Use the data set called <code>prz.dta</code> which is available in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>. This is the data set used in the book “Democracy and Development” <span class="citation" data-cites="prz:2000">(Przeworski et al., 2000)</span>. Deposit this in an appropriate working directory and import the data set into a data frame called <code>prz</code>. You will need the <code>haven</code> package for this, as it is a Stata data set. We will only be looking at a few variables<a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a>:</p>
+<p> Use the data set called <code>prz.dta</code> which is available in the <a href="https://drflolinke.github.io/PO33Q/12-Downloads.html">Downloads Section</a>. This is the data set used in the book “Democracy and Development” <span class="citation" data-cites="prz:2000">(Przeworski et al., 2000)</span>. Deposit this in an appropriate working directory and import the data set into a data frame called <code>prz</code>. You will need the <code>haven</code> package for this, as it is a Stata data set. We will only be looking at a few variables<a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a>:</p>
 <p>&nbsp;</p>
 <div id="tbl-przcode" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-tbl figure">
@@ -2188,12 +2188,12 @@ Table&nbsp;4: Codebook for Przeworski et al.&nbsp;(2000) Data Set
 </section>
 <section id="advanced" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="advanced">Advanced</h2>
-<p> This section draws on the <a href="https://drfloreiche.github.io/PO33Q/07-PO33Q.html#joint-estimation-of-emergence-and-survival">instructions for joint estimation</a>.</p>
+<p> This section draws on the <a href="https://drflolinke.github.io/PO33Q/07-PO33Q.html#joint-estimation-of-emergence-and-survival">instructions for joint estimation</a>.</p>
 <ol start="5" type="1">
 <li>Now interact all the lagged independent variables with the lagged dependent variable. Estimate a fully interactive model and include all the constitutive terms. Put the results in column 5 of <a href="#tbl-interactionmodels" class="quarto-xref">Table&nbsp;<span>5</span></a>. What is the relationship between these coefficients and those in the previous two columns? Is there any extra information provided by this full interaction model that was not available from the previous two models?</li>
 <li>Now consider the straight probit model, the probit model with the lagged dependent variable, and the full interaction model. Produce the ROC curve for each of these models. Interpret a point on one of these curves. What do the ROC curves tell you about the fit of these three models?</li>
 </ol>
-<p>You can find the populated version of <a href="#tbl-interactionmodels" class="quarto-xref">Table&nbsp;<span>5</span></a> and the corresponding RScript in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>.</p>
+<p>You can find the populated version of <a href="#tbl-interactionmodels" class="quarto-xref">Table&nbsp;<span>5</span></a> and the corresponding RScript in the <a href="https://drflolinke.github.io/PO33Q/12-Downloads.html">Downloads Section</a>.</p>
 <p>&nbsp;</p>
 <div id="tbl-interactionmodels" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-tbl figure">
@@ -2715,18 +2715,18 @@ Brambor, T., Clark, W. R., &amp; Golder, M. (2006). <span>Understanding Interact
 <div id="ref-epstein:2006" class="csl-entry" role="listitem">
 Epstein, D. L., Bates, R., Goldstone, J., Kristensen, I., &amp; O’Halloran, S. (2006). <span>Democratic Transitions</span>. <em><span>American Journal of Political Science</span></em>, <em>50</em>(3), 551–569. <a href="https://doi.org/10.1111/j.1540-5907.2006.00201.x">https://doi.org/10.1111/j.1540-5907.2006.00201.x</a>
 </div>
+<div id="ref-linke:forthcoming" class="csl-entry" role="listitem">
+Linke, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative Methods in the Social Sciences</span></em>. Oxford: Oxford University Press.
+</div>
 <div id="ref-prz:2000" class="csl-entry" role="listitem">
 Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F. (2000). <em><span class="nocase">Democracy and Development - Political Institutions and Well-Being in the World, 1950-1990</span></em>. Cambridge: Cambridge University Press. <a href="https://doi.org/10.1017/CBO9780511804946">https://doi.org/10.1017/CBO9780511804946</a>
-</div>
-<div id="ref-reiche:forthcoming" class="csl-entry" role="listitem">
-Reiche, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative Methods in the Social Sciences</span></em>. Oxford: Oxford University Press.
 </div>
 </div>
 </section>
 <section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn1"><p>This is a verbatim reproduction from <span class="citation" data-cites="reiche:forthcoming">Reiche (forthcoming)</span>. The text is based on an explanatory video by <a href="https://youtu.be/4jRBRDbJemM?si=jslp3Vwj3e6H2oSH">StatQuest with Josh Starmer</a>. All figures are copyrighted.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1"><p>This is a verbatim reproduction from <span class="citation" data-cites="linke:forthcoming">Linke (forthcoming)</span>. The text is based on an explanatory video by <a href="https://youtu.be/4jRBRDbJemM?si=jslp3Vwj3e6H2oSH">StatQuest with Josh Starmer</a>. All figures are copyrighted.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn2"><p>This discussion draws on <span class="citation" data-cites="brambor:2006">Brambor et al. (2006)</span>.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn3"><p>I have taken these exercises from some material written by <a href="https://mattgolder.com/">Matt Golder</a> from whom I learned all this many moons ago.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
