--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -196,7 +196,7 @@ window.Quarto = {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
-    <a class="nav-link" href="https://drfloreiche.github.io/"> 
+    <a class="nav-link" href="https://drflolinke.github.io/"> 
 <span class="menu-text">Flo’s Home</span></a>
   </li>  
 </ul>
@@ -1679,8 +1679,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_5xg5wuja8hxawfiggznu(i, j, css_id) {
-          var table = document.getElementById("tinytable_5xg5wuja8hxawfiggznu");
+      function styleCell_y2si3vfosznigm2t60zy(i, j, css_id) {
+          var table = document.getElementById("tinytable_y2si3vfosznigm2t60zy");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1689,8 +1689,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_5xg5wuja8hxawfiggznu(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_5xg5wuja8hxawfiggznu");
+      function spanCell_y2si3vfosznigm2t60zy(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_y2si3vfosznigm2t60zy");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1721,26 +1721,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_uusskt4sgw6lhz4aynfr',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_wq0lfmxxq8ic0o8saevb',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_kfxnqkuoh41dxsiq4vv3',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_zjhocvolcs1jh4z0y13j',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_9p2kmah8qnmvgxi6bc7b',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_hi069zq0p8cjciw2unfs',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_4kwtwb9wyl6o5p18c7z7',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_ytytoo1w7pp43r9f7ex6',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_vusiowf3y84u3q55rrve',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_x8pef066crhr6n7b2h45',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_cu42bcis07v29uuzh0e4',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_rumdxhildmxnhbue02qs',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_08475egjmzlur5ancphh',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_h3rmpbrwma6v0de4erfg',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_4jqytyx58pceyt35j3wg',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_opygo3du8jvetf40my72',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_fbd02elkzd3asbd15kky',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_tw5li0i6rwxaqrfoyd6h',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_qeqd882phgd6ce6f47z5',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_z7z2uujx3n8xd0btqryw',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_hz9e58so6vqn2gbt73zv',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_0oq1txey112o4pqz8d1f',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_0b8eazecq6hua8gxc0pl',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_u3u1t3jn7vvdjcecl296',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_jmh6zn7nnqdxlqyxacr8',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_51gjt5zgkarqg4sfqv0s',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_eaip9i0pkgxgjfbtzxd8',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_c2bioygx8v0vu6kq3ldm',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_5xg5wuja8hxawfiggznu(cell.i, cell.j, group.css_id);
+                  styleCell_y2si3vfosznigm2t60zy(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1748,23 +1748,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_uusskt4sgw6lhz4aynfr, .table th.tinytable_css_uusskt4sgw6lhz4aynfr { text-align: center; text-align: center; }
-      .table td.tinytable_css_wq0lfmxxq8ic0o8saevb, .table th.tinytable_css_wq0lfmxxq8ic0o8saevb { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_kfxnqkuoh41dxsiq4vv3, .table th.tinytable_css_kfxnqkuoh41dxsiq4vv3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_zjhocvolcs1jh4z0y13j, .table th.tinytable_css_zjhocvolcs1jh4z0y13j { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_9p2kmah8qnmvgxi6bc7b, .table th.tinytable_css_9p2kmah8qnmvgxi6bc7b { text-align: center; }
-      .table td.tinytable_css_hi069zq0p8cjciw2unfs, .table th.tinytable_css_hi069zq0p8cjciw2unfs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_4kwtwb9wyl6o5p18c7z7, .table th.tinytable_css_4kwtwb9wyl6o5p18c7z7 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ytytoo1w7pp43r9f7ex6, .table th.tinytable_css_ytytoo1w7pp43r9f7ex6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_vusiowf3y84u3q55rrve, .table th.tinytable_css_vusiowf3y84u3q55rrve { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_x8pef066crhr6n7b2h45, .table th.tinytable_css_x8pef066crhr6n7b2h45 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_cu42bcis07v29uuzh0e4, .table th.tinytable_css_cu42bcis07v29uuzh0e4 { text-align: left; }
-      .table td.tinytable_css_rumdxhildmxnhbue02qs, .table th.tinytable_css_rumdxhildmxnhbue02qs { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_08475egjmzlur5ancphh, .table th.tinytable_css_08475egjmzlur5ancphh { text-align: left; text-align: center; }
-      .table td.tinytable_css_h3rmpbrwma6v0de4erfg, .table th.tinytable_css_h3rmpbrwma6v0de4erfg { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4jqytyx58pceyt35j3wg, .table th.tinytable_css_4jqytyx58pceyt35j3wg { text-align: center; text-align: center; }
+      .table td.tinytable_css_opygo3du8jvetf40my72, .table th.tinytable_css_opygo3du8jvetf40my72 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_fbd02elkzd3asbd15kky, .table th.tinytable_css_fbd02elkzd3asbd15kky { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_tw5li0i6rwxaqrfoyd6h, .table th.tinytable_css_tw5li0i6rwxaqrfoyd6h { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_qeqd882phgd6ce6f47z5, .table th.tinytable_css_qeqd882phgd6ce6f47z5 { text-align: center; }
+      .table td.tinytable_css_z7z2uujx3n8xd0btqryw, .table th.tinytable_css_z7z2uujx3n8xd0btqryw { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_hz9e58so6vqn2gbt73zv, .table th.tinytable_css_hz9e58so6vqn2gbt73zv { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_0oq1txey112o4pqz8d1f, .table th.tinytable_css_0oq1txey112o4pqz8d1f { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_0b8eazecq6hua8gxc0pl, .table th.tinytable_css_0b8eazecq6hua8gxc0pl { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_u3u1t3jn7vvdjcecl296, .table th.tinytable_css_u3u1t3jn7vvdjcecl296 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_jmh6zn7nnqdxlqyxacr8, .table th.tinytable_css_jmh6zn7nnqdxlqyxacr8 { text-align: left; }
+      .table td.tinytable_css_51gjt5zgkarqg4sfqv0s, .table th.tinytable_css_51gjt5zgkarqg4sfqv0s { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_eaip9i0pkgxgjfbtzxd8, .table th.tinytable_css_eaip9i0pkgxgjfbtzxd8 { text-align: left; text-align: center; }
+      .table td.tinytable_css_c2bioygx8v0vu6kq3ldm, .table th.tinytable_css_c2bioygx8v0vu6kq3ldm { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_5xg5wuja8hxawfiggznu" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_y2si3vfosznigm2t60zy" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2823,7 +2823,7 @@ Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F. (2000). <em><s
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp("https:\/\/drfloreiche\.github\.io\/PO33Q\/");
+        var filterRegex = new RegExp("https:\/\/drflolinke\.github\.io\/PO33Q\/");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
