--- a/01-PO33Q.html
+++ b/01-PO33Q.html
@@ -196,7 +196,7 @@ window.Quarto = {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
-    <a class="nav-link" href="https://drfloreiche.github.io/"> 
+    <a class="nav-link" href="https://drflolinke.github.io/"> 
 <span class="menu-text">Flo’s Home</span></a>
   </li>  
 </ul>
@@ -1447,7 +1447,7 @@ World Bank. (n.d.). <em><span>World Development Indicators</span></em>. <a href=
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp("https:\/\/drfloreiche\.github\.io\/PO33Q\/");
+        var filterRegex = new RegExp("https:\/\/drflolinke\.github\.io\/PO33Q\/");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
