--- a/11-Quarto.html
+++ b/11-Quarto.html
@@ -130,7 +130,7 @@ window.MathJax = {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
-    <a class="nav-link" href="https://drfloreiche.github.io/"> 
+    <a class="nav-link" href="https://drflolinke.github.io/"> 
 <span class="menu-text">Flo’s Home</span></a>
   </li>  
 </ul>
@@ -644,7 +644,7 @@ Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F. (2000). <em><s
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp("https:\/\/drfloreiche\.github\.io\/PO33Q\/");
+        var filterRegex = new RegExp("https:\/\/drflolinke\.github\.io\/PO33Q\/");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
